--- a/shadowdrawable/src/main/res/values/strings.xml
+++ b/shadowdrawable/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ShadowDrawable</string>
+    <string name="app_name">ShadowDrawableLibrary</string>
 </resources>
